tests/fixtures/guardrails/invalid/webhook-dynamic-import-promise-chain-bypass/app/routes/webhooks.app.uninstalled.ts
const delegatedTarget = "~/domain/webhooks/enqueue.server";

export async function action() {
  return import(delegatedTarget).then(function () {
    return { topic: "app/uninstalled" };
  });
}
